--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -57,7 +57,7 @@ the {\prg mcphas.j\index{mcphas.j}} and single ion input files. In addition, the
 
 \subparagraph{example of input file {\prg  mcdisp.mf}}
 this file contains temperature $T$, the external field $H$ and
-the effective fields on the different sites:
+the exchange fields on the different sites:
 
 \begin{verbatim}
 # Parameter file  mcdisp.mf - read by mcdisp version 3.0
