--- a/doc/mcphas.tex
+++ b/doc/mcphas.tex
@@ -163,7 +163,7 @@ E_{corr}=\frac{1}{2}\sum_{n} g_{Jn} \mu_B \langle {\mbf J}^n
 and with the mean fields $ \mbf H^n_{eff}$ given by
 
 \begin{equation}\label{meanfield}
-\mbf H^n_{eff}=\mbf H+\sum_{{\mbf G'}n'} \frac{{\mathcal J}
+\mbf H^n_{eff}=\mbf H + \mbf H^n_{xc}=\mbf H+\sum_{{\mbf G'}n'} \frac{{\mathcal J}
 (\mbf r_n-(\mbf G'+\mbf r_{n'}))}{g_{Jn}\mu_B } \langle{\mbf
 J}^{n'}\rangle
 \end{equation}
@@ -627,7 +627,7 @@ curve(s).
                             also for the moment components $ma, mb, mc$ in these tables 
                             is $mb||\vec b$, $mc||(\vec a \times \vec b)$ and $ma$ perpendicular to $mb$ and $mc$.
 
-\item [\prg mcphas.mf]     $T-H$ dependence of mean field configuration, stored as $g_J \mu_B H_{eff}(i)$(unit is in meV)
+\item [\prg mcphas.mf]     $T-H$ dependence of exchange field configuration, stored as $g_J \mu_B H_{xc}(i)$(unit is in meV)
                             for i=1,2,...,number of spins in magnetic unit cell.
                             Note, in case of non-orthogonal axes the convention for applied field $Ha, Hb,Hc$ and
                             also for the mean field components in these tables 
