--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -559,7 +559,7 @@ in the following format:
 #                        respectively to get magnetic unit cell
 # 'nat' denotes the number of magnetic atoms in magnetic unit cell
 #
-# Temperature,    Magnetic Field: Magnetic Unit Cell
+# Temperature,  External Magnetic Field: Magnetic Unit Cell
 #! T=1.3 K Ha=0 T Hb= 0 T Hc= 0 T: nr1=2 nr2=2 nr3=2 nat=8 
 #
 #
@@ -570,37 +570,36 @@ in the following format:
 #                                      Lande factor
 #                                      Neutron Scattering Length (10^-12 cm) 
 #                 -it may contain a    Debey Waller Factor
-# 'da' 'db' and 'dc' are not used by the program (unless you enter a line #! use_dadbdc=1), 
+# 'da' 'db' and 'dc' are not used by the program (unless you enter a line #! use_dadbdc=1)
 # 'dr1','dr2' and 'dr3' refer to the primitive lattice given below
 # 'Ma','Mb','Mc' denote the magnetic moment components in Bohr magnetons
 #                in case of non orthogonal lattices instead of Ma Mb Mc the components Mi Mj Mk
 #                have to be given, which refer to an right handed orthogonal coordinate system 
 #                defined by j||b, k||(a x b) and i normal to k and j
 # '<Ja>' '<Jb>' '<Jc>' (optional) denote the momentum components 
-# 'gjmbHeffa' 'gjmbHeffb' 'gjmbHeffc' (optional line, used to go beyond dipole approx for formfactor)
+# 'gjmbHxc1' 'gjmbHxc2' 'gjmbHxc3' (optional line, used to go beyond dipole approx for formfactor)
 #                                     denote the corresponding meanfields multiplied by 
 #                                     Lande factor and Bohr magneton 
 #
-#{atom-file} da[a]  db[b]    dc[c]     dr1[r1]  dr2[r2]  dr3[r3]   <Ma>     <Mb>     <Mc> [mb] <Ja>     <Jb>     %%@
-<Jc> ...
-#{corresponding effective fields gjmbHeff [meV]- if passed to mcdiff only these are used for caculation (not %%@
-the magnetic moments)}
-{Ce3p.sipf} 0.00000  0.00000  0.00000   0.00000  0.00000  0.00000   +0.69590 +0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> +0.58640 +0.58660 +0.00000
-{Ce3p.sipf} 0.50000  0.50000  0.50000   0.00000  0.00000  1.00000   -0.69590 -0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> -0.58640 -0.58660 +0.00000
-{Ce3p.sipf} 0.00000  1.00000  0.00000   0.00000  1.00000  0.00000   -0.69590 -0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> -0.58640 -0.58660 +0.00000
-{Ce3p.sipf} 0.50000  1.50000  0.50000   0.00000  1.00000  1.00000   +0.69590 +0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> +0.58640 +0.58660 +0.00000
-{Ce3p.sipf} 1.00000  0.00000  0.00000   1.00000  0.00000  0.00000   -0.69590 -0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> -0.58640 -0.58660 +0.00000
-{Ce3p.sipf} 1.50000  0.50000  0.50000   1.00000  0.00000  1.00000   +0.69590 +0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> +0.58640 +0.58660 +0.00000
-{Ce3p.sipf} 1.00000  1.00000  0.00000   1.00000  1.00000  0.00000   +0.69590 +0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> +0.58640 +0.58660 +0.00000
-{Ce3p.sipf} 1.50000  1.50000  0.50000   1.00000  1.00000  1.00000   -0.69590 -0.69620 +0.00000  
-                  corresponding effective fields gjmbHeff [meV]--> -0.58640 -0.58660 +0.00000
+#{atom-file} da[a]  db[b]    dc[c]     dr1[r1]  dr2[r2]  dr3[r3]   <Ma>     <Mb>     <Mc> [mb] <Ja>     <Jb>     <Jc> ...
+#{corresponding exchange fields gjmbHxc [meV]- if passed to mcdiff only these are used for caculation (not the magnetic moments)}
+{Ce3p.sipf}  0.00000  0.00000  0.00000   0.00000  0.00000  0.00000   +0.69590 +0.69620 +0.00000  
+                    corresponding exchange fields gjmbHxc [meV]--> +0.58640 +0.58660 +0.00000
+{Ce3p.sipf}  0.50000  0.50000  0.50000   0.00000  0.00000  1.00000   -0.69590 -0.69620 +0.00000 
+                    corresponding exchange fields gjmbHxc [meV]--> -0.58640 -0.58660 +0.00000
+{Ce3p.sipf}  0.00000  1.00000  0.00000   0.00000  1.00000  0.00000   -0.69590 -0.69620 +0.00000 
+                    corresponding exchange fields gjmbHxc [meV]--> -0.58640 -0.58660 +0.00000
+{Ce3p.sipf}  0.50000  1.50000  0.50000   0.00000  1.00000  1.00000   +0.69590 +0.69620 +0.00000 
+                    corresponding exchange fields gjmbHxc [meV]--> +0.58640 +0.58660 +0.00000
+{Ce3p.sipf}  1.00000  0.00000  0.00000   1.00000  0.00000  0.00000   -0.69590 -0.69620 +0.00000 
+                    corresponding exchange fields gjmbHxc [meV]--> -0.58640 -0.58660 +0.00000
+{Ce3p.sipf}  1.50000  0.50000  0.50000   1.00000  0.00000  1.00000   +0.69590 +0.69620 +0.00000 
+                    corresponding exchange fields gjmbHxc [meV]--> +0.58640 +0.58660 +0.00000
+{Ce3p.sipf}  1.00000  1.00000  0.00000   1.00000  1.00000  0.00000   +0.69590 +0.69620 +0.00000  
+                    corresponding exchange fields gjmbHxc [meV]--> +0.58640 +0.58660 +0.00000
+{Ce3p.sipf}  1.50000  1.50000  0.50000   1.00000  1.00000  1.00000   -0.69590 -0.69620 +0.00000
+                    corresponding exchange fields gjmbHxc [meV]--> -0.58640 -0.58660 +0.00000
+
 \end{verbatim}
 }
 
