.. some more bugs corrected

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -467,7 +467,7 @@ this column.
 graphical
 display\index{display} of a 3 dimensional dataset as a colour and/or contour plot. Here '5 6 8' 
 denote the x,y and z column in file {\prg ./results/mcdisp.dsigma.tot}, which should
-be plotted. Figure~\ref{diffus} shows an sample output of this program.
+be plotted. Figure~\ref{ho2ti2o7diffuse} shows an sample output of this program.
 \item [\prg displaytext\index{displaytext} ./results/mcphas.hkl] monitors the file mcphas.hkl in %%@
 a text window
 on screen.
