--- a/doc/cdoperator.tex
+++ b/doc/cdoperator.tex
@@ -35,7 +35,7 @@ If higher multiplets are neglected,
 the expectation values of tesseral harmonics at the right side of equation (\ref{chargedensity2}) can
 be rewritten using the operator equivalent method by Stevens\cite{hutchings64-227}:
 
-  \begin{equation}
+  \begin{equation}\label{chargedensity_coefficients}
 	      \langle\sum_i Z_l^{m}(\Omega_i)\rangle = |p_{lm}| \theta_{l} \langle O_l^m(\mbf J)\rangle_T 
 	      \end{equation} 
 
