--- a/doc/graphic_display.tex
+++ b/doc/graphic_display.tex
@@ -65,7 +65,7 @@ this column.
 \item [displaycontour\index{displaycontour} 5 6 8 ./results/mcdisp.dsigma.tot] produces a graphical
 display\index{display} of a 3 dimensional dataset as a colour and/or contour plot. Here '5 6 8' 
 denote the x,y and z column in file {\prg ./results/mcdisp.dsigma.tot}, which should
-be plotted. Figure~\ref{diffus} shows an sample output of this program. The axes labels may be changed
+be plotted. Figure~\ref{ho2ti2o7diffuse} shows an sample output of this program. The axes labels may be changed
 in Tree View $\rightarrow$ xaxis title, etc.
 
 \item [displaytext\index{displaytext} ./results/mcphas.hkl] monitors the file mcphas.hkl in a text window
@@ -148,7 +148,7 @@ power point
 \end{figure}
 
 \subsection{Programs to calculate and display Charge-, Spin-, Moment- and Currentdensities
-of the unfilled shell}
+of the unfilled shell}\label{displaydensities}
                           Note, in case of non-orthogonal axes the convention 
                            for applied field $Ha, Hb,Hc$ 
                             is $Hb||\vec b$, $Hc||(\vec a \times \vec b)$ and $Ha$ perpendicular to $Hb$ and $Hc$.
