--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -1,3 +1,33 @@
+@incollection{dagotto03-1,
+author = {Elbio Dagotto},
+   booktitle     = {Springer Series in Solid-State Sciences},
+   title = {Nanoscale Phase Separation and Colossal Magnetoresistance},
+   chapter   = {1},
+   pages ={1},
+   year      = {2003},
+   publisher = {Springer},
+   volume    = {136}
+}
+
+@book{tjablikov67-1,
+author={S. V. Tjablikov},
+title={Methods in the quantum theory of magnetism},
+publisher={Plenum Press, New York},
+year= 1967}
+@Article{divis00-6774,
+ title = {Rare earth borocarbides: Electronic structure calculations and electric field gradients},
+  author = {Divi\ifmmode \check{s}\else \v{s}\fi{}, M.  and Schwarz, K.  and Blaha, P.  and Hilscher, G.  and Michor, H.  and Khmelevskyi, S. },
+  journal = {Phys. Rev. B},
+  volume = {62},
+  number = {10},
+  pages = {6774--6785},
+  numpages = {11},
+  year = {2000},
+  month = {Sep},
+  doi = {10.1103/PhysRevB.62.6774},
+  publisher = {American Physical Society}
+}
+
 @article{rotter11-12008,
   author={M Rotter and B Fåk and J A Blanco},
   title={Magnetic excitations in the longitudinally amplitude modulated magnetic structure of PrNi 2 Si 2},
